# file-update-ota

./: .gitignore  .gitmodules  README.md
src/: main.cpp
src/daemon/: CMakeLists.txt
src/daemon/config/: config.yaml
src/daemon/src/: daemon.cpp
src/uploader/: uploader.cpp
